# internad

./: README.md  demo.py  pyproject.toml
src/internad/: __init__.py
