[project]
name = "internad"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Aman Ibrahim", email = "amanmibra@gmail.com" }
]
dependencies = [
    "gradio>=5.7.1",
    "soundfile>=0.12.1",
    "cryptography>=44.0.0",
    "numba>=0.57.1",
    "llvmlite>=0.40.1",
    "librosa>=0.10.2.post1",
    "matplotlib>=3.9.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/internad"]

[tool.rye.scripts]
demo = "python demo.py"
